tests/negative/abilities/with_non_ability.orng
// with_non_ability.orng:9:16: error: expected an ability, got the type `Int`
// fn f() with Int {}
//               ^
// 
fn main() -> Int {
    4
}

fn f() with Int {}